# beginner_linear-viscous-water-wave-simulator

./: README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: design-system.md  final-polish-review.md  model.md  packaging.md  runtime-architecture.md  validation.md
docs/assets/: README.md
src/wave_lab/: __init__.py  __main__.py  app.py  compare_panel.py  control_panel.py  design_system.py  diagnostics_panel.py  education.py  explanation_panel.py  exporting.py  runtime.py  settings.py  simulation.py  visualization.py
tests/: test_compare_mode.py  test_control_panel.py  test_design_system.py  test_diagnostics_panel.py  test_explanation_panel.py  test_exporting.py  test_runtime.py  test_simulation.py  test_visualization.py
