[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "viscous-wave-lab"
version = "0.1.0"
description = "Beginner-friendly numerical simulation core for damped linear water waves."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "kieran-lucas" },
]
dependencies = [
  "PySide6>=6.8",
]

[project.scripts]
viscous-wave-lab = "wave_lab.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
